--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,9 @@ header {
 .download .v1 {
   color: #8fe3f9;
 }
+.blue {
+  background: #4d96a9;
+}
 .what {
   border-radius: 29px;
   background: #855fb1;
