add desktop. left image to correct

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,18 @@ body {
   background: #fafafa;
 }
 main {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  */
+
+  padding: 0 24px;
+}
+.hero-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 24px;
+  text-align: center;
 }
 
 button {
@@ -22,9 +30,18 @@ header {
   flex-direction: column;
   padding-top: 48px;
 }
-.hero-img {
-  width: 100%;
+
+.hero-photos {
+  display: flex;
+  gap: 0;
+  justify-content: space-between;
+  align-items: center;
   margin-top: 64px;
+  width: 100%;
+  display: flex;
+}
+.hero-photos img {
+  width: 199px;
 }
 
 .text-wrapper {
@@ -82,11 +99,17 @@ header {
 .blue {
   background: #4d96a9;
 }
+.blue:hover {
+  background: #71c0d4;
+}
 .what {
   border-radius: 29px;
   background: #855fb1;
   border: none;
   padding: 16px 29px;
+}
+.purple:hover {
+  background: #b18bdd;
 }
 
 .divider {
@@ -227,9 +250,13 @@ footer button {
 }
 
 @media (min-width: 768px) {
+  .hero-photos img {
+    width: 394px;
+  }
   .text-wrapper h1 {
     font-size: 48px;
     width: 339px;
+    line-height: 48px; /* 100% */
   }
   .text-wrapper p {
     width: 457px;
@@ -248,6 +275,7 @@ footer button {
     font-size: 40px;
     width: 445px;
     margin-top: 16px;
+    line-height: 44px; /* 110% */
   }
   .meeting-text-wrapper p {
     width: 573px;
@@ -259,11 +287,52 @@ footer button {
   footer h2 {
     font-size: 40px;
     width: 457px;
+    line-height: 44px; /* 110% */
   }
   footer p {
     margin-top: 32px;
+    width: 573px;
   }
   footer button {
     margin-top: 40px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .text-wrapper h1 {
+    font-size: 64px;
+    width: 445px;
+    line-height: 64px; /* 100% */
+  }
+  .text-wrapper p {
+    margin-top: 34px;
+    width: 540px;
+    font-size: 18px;
+  }
+  .meeting-text-wrapper {
+    margin-top: 66px;
+  }
+  .meeting h2 {
+    font-size: 40px;
+    line-height: 44px; /* 110% */
+    width: 445px;
+  }
+  .meeting p {
+    font-size: 18px;
+  }
+
+  footer {
+    padding: 116px 165px;
+    flex-direction: row;
+  }
+  footer p {
+    width: 350px;
+    text-align: start;
+  }
+  footer h2 {
+    margin-right: 125px;
+  }
+  footer p {
+    margin-right: 92px;
   }
 }
