--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,9 @@ header {
   flex-direction: column;
   padding-top: 48px;
 }
+.desktop {
+  display: none;
+}
 
 .hero-photos {
   display: flex;
@@ -40,8 +43,9 @@ header {
   width: 100%;
   display: flex;
 }
+
 .hero-photos img {
-  width: 199px;
+  width: 100%;
 }
 
 .text-wrapper {
@@ -199,6 +203,8 @@ header {
 .second {
   position: absolute;
   top: -200px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 footer {
@@ -206,14 +212,13 @@ footer {
   flex-direction: column;
   padding: 72px 24px;
   align-items: center;
-  background: #4d96a9;
+  background-color: rgba(77, 150, 169, 0.8);
   position: relative;
   margin-top: 178px;
 }
 
 footer:before {
-  background: url("./assets/mobile/image-footer.jpg"),
-    lightgray 0px 0px / 100% 100% no-repeat;
+  background: url("./assets/mobile/image-footer.jpg");
   content: "";
   background-repeat: no-repeat;
   background-size: cover;
@@ -222,7 +227,8 @@ footer:before {
   right: 0;
   top: 0;
   bottom: 0;
-  opacity: 0.1045;
+  z-index: -1;
+  /* opacity: 0.1045; */
 }
 
 footer h2 {
@@ -301,6 +307,17 @@ footer button {
 }
 
 @media (min-width: 1440px) {
+  .tablet {
+    display: none;
+  }
+  .desktop {
+    display: block;
+  }
+  .hero-container {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
   .text-wrapper h1 {
     font-size: 64px;
     width: 445px;
