--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,6 @@ main {
   flex-direction: column;
   align-items: center;
   */
-
-  padding: 0 24px;
 }
 .hero-container {
   display: flex;
@@ -34,17 +32,8 @@ header {
   display: none;
 }
 
-.hero-photos {
-  display: flex;
-  gap: 0;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 64px;
-  width: 100%;
-  display: flex;
-}
-
-.hero-photos img {
+.hero-container img {
+  margin-top: 48px;
   width: 100%;
 }
 
@@ -54,6 +43,7 @@ header {
   align-items: center;
   gap: 24px;
   margin-top: 72px;
+  padding: 0px 24px;
   /* width: 327px; */
   /* text-align: center; */
 }
@@ -152,12 +142,13 @@ header {
   justify-content: center;
   /* align-items: center; */
   gap: 25px;
+  align-content: center;
   margin-top: 64px;
 }
 
 .photos-container img {
   padding: 0;
-  width: 164px;
+  width: 151px;
   border-radius: 8px;
 }
 
@@ -167,6 +158,7 @@ header {
   align-items: center;
   text-align: center;
   margin-top: 56px;
+  padding: 0px 24px;
 }
 
 .meeting-text-wrapper h3 {
@@ -258,8 +250,8 @@ footer button {
 }
 
 @media (min-width: 768px) {
-  .hero-photos img {
-    width: 394px;
+  .hero-container img {
+    margin-top: 72px;
   }
   .text-wrapper h1 {
     font-size: 48px;
@@ -318,9 +310,14 @@ footer button {
     flex-direction: row;
   }
 
+  .text-wrapper {
+    padding: 0px 88px;
+  }
+
   .text-wrapper h1 {
     font-size: 64px;
     width: 445px;
+
     line-height: 64px; /* 100% */
   }
   .text-wrapper p {
